# cmake_bug_reproducible_example

./: CMakeLists.txt  README.md  bug.cpp  main.cpp
ui/dialogs/: dataTimesetting.ui  widgetcmakeexample.cpp  widgetcmakeexample.h  widgetcmakeexample.ui
